--- a/poème.html
+++ b/poème.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <title>Le poème coder de Racine!</title>
     </head>
-    <body>
+    <body style="background-color:red">
 
-<h1>Fire and Ice by Robert Frost!</h1>
+<h1 style="color:darkblue"> <center> Fire and Ice by Robert Frost! </center> </h1>
 
-<p> Some say the world will end in fire,<br>
+<p> <center> Some say the world will end in fire,<br>
 Some say in ice.<br>
 From what I’ve tasted of desire<br>
 I hold with those who favor fire.<br>
@@ -16,9 +16,9 @@ But if it had to perish twice,<br>
 I think I know enough of hate<br>
 To say that for destruction ice<br>
 Is also great<br>
-And would suffice.</p>
+And would suffice.<center> </p>
 
-<h1>La Fin! (Racine la coder lol)</h1>
+<h1 style="color:darkblue"> <center>La Fin! (Racine la coder lol) </center> </h1>
 
     </body>
 </html>
