--- a/voyage.html
+++ b/voyage.html
@@ -6,8 +6,8 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    <h1> Le Voyage de Racine </h1>
+  <body style="background-color:lightgreen">
+    <h1> <center> Le Voyage de Racine </center> </h1>
 
     <h2> Où ai-je été </h2>
 
