--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    <h3> Voici mes projets jusqu'à présent: </h2>
 
    <ul>
-     <li> <a> Biographie </a> </li>
-     <li> <a href="https://github.com/NoName-04/NoName-04.github.io/blob/f03b31ce1bc93549712e1be40bf477f73a62a518/po%C3%A8me.html"> Défis poème </a> </li>
-     <li> <a href="https://github.com/NoName-04/NoName-04.github.io/blob/bfcca7cf7e1ada5c40f07f2d4c0b8f661cfd1d4e/voyage.html"> Le voyage parfait </a> </li>
+     <li> <a href="https://noname-04.github.io/biographie"> Biographie </a> </li>
+     <li> <a href="https://noname-04.github.io/po%C3%A8me"> Défis poème </a> </li>
+     <li> <a href="https://noname-04.github.io/voyage"> Le voyage parfait </a> </li>
     </ul>
 
     <script src="script.js"></script>
