--- a/biographie.html
+++ b/biographie.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <h1> <center> Page Biographique de Racine le sexy! <br> <img src=""> </center> </h1>
+    <h1> <center> Page Biographique de Racine le sexy! <br> <img src="IMG_20210503_170418123.jpg"> </center> </h1>
 
 <!-- WOW! Je suis trop sexy! -->
 
