--- a/biographie.html
+++ b/biographie.html
@@ -6,7 +6,7 @@
     <title>Page Biographique de Racine</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body>
+  <body style="background-color:beige">
     <h1> <center> Page Biographique de Racine le sexy! <br> <img src="IMG_20210503_170418123.jpg" width="400"> </center> </h1>
 
 <!-- WOW! Je suis trop sexy! -->
