--- a/poème.html
+++ b/poème.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <title>Le poème coder de Racine!</title>
     </head>
-    <body style="background-color:red">
+    <body style="background-color:lightblue">
 
-<h1 style="color:darkblue"> <center> Fire and Ice by Robert Frost! </center> </h1>
+<h1 style="color:red"> <center> Fire and Ice by Robert Frost! </center> </h1>
 
 <p> <center> Some say the world will end in fire,<br>
 Some say in ice.<br>
