--- a/biographie.html
+++ b/biographie.html
@@ -16,7 +16,7 @@
     <li> <a href="#Racine2"> Mes sites préférés </a> </li>
   </ul>
 
-  <p> Salut, je m'appelle Racine Kane aka Sexy Kane ou Intelligent Kane. Je suis élève à l'école Paul-Desmarais. J'aime beaucoup de choses. Par exemple, j'aime manger, j'aime cuisiner, j'aime dormir, etc. De plus, mon passe-temps préféré est les jeux vidéo. Cependant, les jeux vidéo me causent des problèmes de dos parce que je carry trop mon coéquipier dans les jeux. Par exemple, Jeph est l'un des coéquipiers que je carry dans Call of Duty. <!-- Je n'ai pas mal au dos. C'est une blague. --> </p>
+  <p> Salut, je m'appelle Racine Kane aka Sexy Kane ou Intelligent Kane. Je suis élève à l'école Paul-Desmarais. J'aime beaucoup de choses. Par exemple, j'aime manger, j'aime cuisiner, j'aime dormir, etc. De plus, mon passe-temps préféré est les jeux vidéo. Cependant, les jeux vidéo me causent des problèmes de dos parce que je carry trop mes coéquipiers dans les jeux. Par exemple, Jeph est l'un des coéquipiers que je carry dans Call of Duty. <!-- Je n'ai pas mal au dos. C'est une blague. --> </p>
 
   <h2 id="Racine"> La programmation </h2>
     <p> En terme de programmation, je suis un amateur. J'ai un peu d'expérience avec le codage, mais j'ai fais un peu le codage de jeu. Donc, fondamentalement, je suis nouveau dans ce domaine, et jusqu'à présent j'aime vraiment le codage. <!-- Voici un site que j'ai utilisé pour le codage de jeu: https://codecombat.com --> </p>
