--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
      <li> <a href="https://noname-04.github.io/biographie"> Biographie </a> </li>
      <li> <a href="https://noname-04.github.io/po%C3%A8me"> Défis poème </a> </li>
      <li> <a href="https://noname-04.github.io/voyage"> Le voyage parfait </a> </li>
+     <li> <a href="https://noname-04.github.io/perroquet"> Le Perroquet Canadien </a> </li>
+     <li> <a href="https://noname-04.github.io/pizza"> La Pizza </a> </li>
+     <li> <a href="https://noname-04.github.io/caisse"> La Caisse </a> </li>
     </ul>
 
     <script src="script.js"></script>
