--- a/biographie.html
+++ b/biographie.html
@@ -38,7 +38,7 @@
       <tr>
         <td> Javascript </td>
         <td> Je suis ok </td>
-        <td> <a href="https://noname-04.github.io/caisse"> La caisse </a> </td>
+        <td> La caisse </td>
       </tr>
       <tr>
         <td> Python </td>
