--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      <li> <a href="https://noname-04.github.io/biographie"> Biographie </a> </li>
      <li> <a href="https://noname-04.github.io/po%C3%A8me"> Défis poème </a> </li>
      <li> <a href="https://noname-04.github.io/voyage"> Le voyage parfait </a> </li>
+      <li> <a href="https://noname-04.github.io/affichenom"> Formulaire d'afficheur de nom </a> </li>
+      <li> <a href="https://noname-04.github.io/astérique"> Les motifs d'astériques </a> </li>
     </ul>
 
     <script src="script.js"></script>
