--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
      <li> <a href="https://noname-04.github.io/biographie"> Biographie </a> </li>
      <li> <a href="https://noname-04.github.io/po%C3%A8me"> Défis poème </a> </li>
      <li> <a href="https://noname-04.github.io/voyage"> Le voyage parfait </a> </li>
-      <li> <a href="https://noname-04.github.io/affichenom"> Formulaire d'afficheur de nom </a> </li>
-      <li> <a href="https://noname-04.github.io/astérique"> Les motifs d'astériques </a> </li>
+     <li> <a href="https://noname-04.github.io/affichenom"> Formulaire d'afficheur de nom </a> </li>
+     <li> <a href="https://noname-04.github.io/astérique"> Les motifs d'astériques </a> </li>
+     <li>   <a onclick=" (
+  var nom = prompt('Quel est ton nom?')
+  alert('Eh! mon nom est ' + nom + ' eh!')
+
+  var age = prompt('Quel âge as-tu?');
+  alert('Eh! j ai' + age +  'ans, eh!')
+
+  var sport = prompt('Quel est ton sport préféré?'');
+  alert('Eh! mon sport favori est ' + sport + ', eh!'')
+
+  var plat = prompt('Quel est ton plat préféré?'');
+  alert('Eh! Mon plat préféré est ' + plat + ', eh!')
+       
+) " href="https://noname-04.github.io/perroquet"> Le Perroquet Canadien </a></li>
     </ul>
 
     <script src="script.js"></script>
