--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      <li> <a href="https://noname-04.github.io/voyage"> Le voyage parfait </a> </li>
      <li> <a href="https://noname-04.github.io/affichenom"> Formulaire d'afficheur de nom </a> </li>
      <li> <a href="https://noname-04.github.io/astérique"> Les motifs d'astériques </a> </li>
+     <li> <a href="https://noname-04.github.io/quincaillerie"> La quincaillerie </a> </li>
      <li>   <a onclick=" (
   var nom = prompt('Quel est ton nom?')
   alert('Eh! mon nom est ' + nom + ' eh!')
