--- a/affichenom.html
+++ b/affichenom.html
@@ -38,7 +38,7 @@
              var nomMilieu = document.getElementById("txtNomMilieu").value;
              var nomFamille = document.getElementById("txtNomFamille").value;
 
-            console.log("Initiales: " + prenom[0] + "." + nomMilieu[0] + "." + nomFamille[0] + ".")
+            document.write("Initiales: " + prenom[0] + "." + nomMilieu[0] + "." + nomFamille[0] + ".")
          }
 
         function confirmeAfficheNom() {
@@ -46,7 +46,7 @@
              var nomMilieu = document.getElementById("txtNomMilieu").value;
              var nomFamille = document.getElementById("txtNomFamille").value;
 
-            console.log("Nom au complet: " + prenom + " " + nomMilieu + " " + nomFamille)
+             document.write("Nom au complet: " + prenom + " " + nomMilieu + " " + nomFamille)
          }
 
         function confirmeAfficheUtilisateur() {
@@ -54,7 +54,7 @@
              var nomMilieu = document.getElementById("txtNomMilieu").value;
              var nomFamille = document.getElementById("txtNomFamille").value;
 
-            console.log("Nom d’utilisateur: " + prenom[0] + nomMilieu[0] + nomFamille)
+             document.write("Nom d’utilisateur: " + prenom[0] + nomMilieu[0] + nomFamille)
          }
            
      </script>
