--- a/quincaillerie.html
+++ b/quincaillerie.html
@@ -2,13 +2,13 @@
 <html>
  <head>
    <meta charset="utf-8">
-   <title>Quicellarie</title>
+   <title>Quincaillerie</title>
  </head>
  <body>
  
    <form>
  
-     <h1>Bienvenue à La Quincallerie</h1>
+     <h1>Bienvenue à la Quincaillerie de Racine</h1>
  
      <label for="txtBoulons">Combien de boulons achetez-vous: </label>
      <input type="text" id="txtBoulons">
@@ -27,10 +27,9 @@
      <div id="divAffiche">
  
      </div>
- 
-      <script src="script.js"> </script>
- 
+
    </form>
+<script src="quincaillerie.js"> </script>
  
  </body>
 </html>
