--- a/astérique.html
+++ b/astérique.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <meta charset="utf-8">
-   <title>Inscription</title>
+   <title>Astérique</title>
  </head>
  <body>
  
@@ -33,7 +33,8 @@
           for(let i=1; i<=numAsteriques; i++) {
             asteriques = asteriques + "*"
            }
-          console.log(asteriques)   
+          var affiche = document.getElementById("divAffiche");
+            affiche.innerHTML = asteriques   
          }
 
         function confirmeForme2() {
@@ -44,7 +45,8 @@
          for (let j = 1; j <= i; j++) {
             asterisques = asterisques + "*";
           }
-            console.log (asterisques);
+            var affiche = document.getElementById("divAffiche");
+            affiche.innerHTML = asterisques;
           } 
          }
 
@@ -56,7 +58,8 @@
           for (let j = 1; j <= i; j++) {
            asterisques = asterisques + "*";
           }
-           console.log (asterisques);
+            var affiche = document.getElementById("divAffiche");
+            affiche.innerHTML = asterisques;
           }
          }
 
@@ -71,7 +74,8 @@
           for (let j = 1; j <= 11-i; j++) {
             asterisques = asterisques + "*";
           }
-            console.log (espaces+asterisques);
+            var affiche = document.getElementById("divAffiche");
+            affiche.innerHTML = espaces+asterisques;
           }
         }
 
@@ -86,7 +90,8 @@
           for (let j = 1; j <= i; j++) {
             asterisques = asterisques + "*";
           }
-            console.log (espaces+asterisques);
+            var affiche = document.getElementById("divAffiche");
+            affiche.innerHTML =espaces+asterisques;
           }
          }
 
