--- a/perroquet.html
+++ b/perroquet.html
@@ -1,11 +1,1 @@
-var nom = prompt("Quel est ton nom?");
-alert("Eh! mon nom est " + nom + " aussi, nous jumelons, eh!")
- 
-var âge = prompt("Quel âge as-tu?");
-alert("Eh! Je suis surpris, j'ai " + âge + " ans aussi, eh!")
- 
-var sport = prompt("Quel est ton sport préféré?");
-alert("Eh! mon sport favori est " + sport + " aussi. Je crois que nous sommes des soulmates, eh!")
- 
-var plat = prompt("Quel est ton plat préféré?");
-alert("Eh! Mon plat préféré est " + plat + " aussi. Tu es mon jumeau non familial, eh!")
+<img src="" width="500">
