--- a/perroquet.html
+++ b/perroquet.html
@@ -1,1 +1,13 @@
-<img src="Screenshot 2021-05-27 21.47.40.png" width="500">
+!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Le perroquet</title>
+    </head>
+    <body>
+
+        <img src="Screenshot 2021-05-27 21.47.40.png" width="500">  
+      
+    </body>
+</html>
+
