--- a/perroquet.html
+++ b/perroquet.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -6,7 +6,8 @@
     </head>
     <body>
 
-        <img src="Screenshot 2021-05-27 21.47.40.png" width="500">  
+        <h1> <center> Le Perroquet Canadien </h1> <br>
+        <img src="Screenshot 2021-05-27 21.47.40.png" width="700">  </center>
       
     </body>
 </html>
