--- a/perroquet.html
+++ b/perroquet.html
@@ -6,8 +6,8 @@
     </head>
     <body>
 
-        <h1> <center> Le Perroquet Canadien </h1>  </center> <br>
-        <center> <img src="Screenshot 2021-05-27 21.47.40.png" width="800"> </center>
+        <h1> <center> Le Perroquet Canadien <br> <img src="Screenshot 2021-05-27 21.47.40.png" width="800"> </center> </h1>
+      
       
     </body>
 </html>
