--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   alert('Eh! Mon plat préféré est ' + plat + ', eh!')
 
 " href="https://noname-04.github.io/perroquet"> Le Perroquet Canadien </a></li>
+     <li> <a href="https://noname-04.github.io/madlibs"> Le MadLibs </a> </li>
     </ul>
 
     <script src="script.js"></script>
