--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 " href="https://noname-04.github.io/perroquet"> Le Perroquet Canadien </a></li>
      <li> <a href="https://noname-04.github.io/madlibs"> Le MadLibs </a> </li>
      <li> <a href="https://noname-04.github.io/commerceligne"> Commerce en ligne </a> </li>
+     <li> <a href="https://noname-04.github.io/battleship"> Projet Final </a> </li>
     </ul>
 
     <script src="script.js"></script>
